# task-tracker

./: .editorconfig  .flake8  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: main.py  todo.py
tests/: test_to_do.py  test_todo.py
