[tool.poetry]
name = "tast-tracker"
version = "0.1.0"
description = "Track and manage to-do list"
authors = ["Leo Reinmann <leo@reinmann.me>"]
license = "MIT"
readme = "README.md"
include = ["src"]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
