[tool.poetry]
name = "tast-tracker"
version = "0.1.0"
description = "Track and manage to-do list"
authors = ["Leo Reinmann <leo@reinmann.me>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.scripts]
todo = "src.main:main"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
flake8 = "^7.1.1"
mypy = "^1.11.2"
coverage = "^7.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
